# OptiX_Raytracer

./: .gitignore  .gitmodules  README.md  create_cover.ps1  run.ps1  runrelease.ps1  setup.ps1
SDK/: .gitignore  CMakeLists.txt  CMakePresets.json  create_cover.ps1  imgui.ini  make.ps1  run.ps1  runrelease.ps1  setup.ps1  vcpkg.json
SDK/ext/: CMakeLists.txt
SDK/imgui_test/: CMakeLists.txt  camera.h  device.cpp  device.h  device_object.h  diffuse.h  directional_light.h  light.h  main.cpp  make_geometry.h  optixTriangle.cpp  optixTriangle.cu  optixTriangle.h  point_light.h  tracer_window.cpp  tracer_window.h  triangle_gas.cpp  triangle_gas.h  volumetric_light.h
SDK/sutil/: Camera.cpp  Camera.h  GLDisplay.cpp  GLDisplay.h  sutil.cpp
